--- a/FinalProjectCode.ipynb
+++ b/FinalProjectCode.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1850b59d-2ddc-49de-893c-186c54333987",
+   "cell_type": "markdown",
+   "id": "661d209e-0ef5-48bc-8196-ecaa3b181d6d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## STAT 301 Final Group Report"
+   ]
   },
   {
    "cell_type": "code",
