--- a/FinalProjectCode.ipynb
+++ b/FinalProjectCode.ipynb
@@ -5,7 +5,7 @@
    "id": "661d209e-0ef5-48bc-8196-ecaa3b181d6d",
    "metadata": {},
    "source": [
-    "## STAT 301 Final Group Report"
+    "# STAT 301 Final Group Report"
    ]
   },
   {
