--- a/FinalProjectCode.ipynb
+++ b/FinalProjectCode.ipynb
@@ -5,11 +5,7 @@
    "id": "661d209e-0ef5-48bc-8196-ecaa3b181d6d",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "# STAT 301 Final Group Report"
-=======
     "### STAT 301 Final Group Report"
->>>>>>> 4b860a3 (Finished the EDA)
    ]
   },
   {
@@ -127,7 +123,7 @@
     "- Missing values were checked for and removed (though none were present).\n",
     "- A summary of all columns was printed to inspect the distributions and levels of each variable.\n",
     "\n",
-    "This step ensures that the dataset is **tidy, consistent**, and ready for analysis."
+    "This step ensures that the dataset is **tidy, consistent**, and ready for analysis.."
    ]
   },
   {
