--- a/FinalProjectCode.ipynb
+++ b/FinalProjectCode.ipynb
@@ -8,7 +8,7 @@
     "# STAT 301 Final Group Report\n",
     "## Group 1:\n",
     "Arnav Gupta (70413034) \n",
-    "Thomas Hesselbo (111)\n",
+    "Thomas Hesselbo \n",
     "Gracie Shao  \n",
     "Frances Shen (46441242)\n"
    ]
@@ -4072,7 +4072,7 @@
    "id": "e98c3a3a-a87d-49b2-aef4-2679656ad110",
    "metadata": {},
    "source": [
-    "This heatmap visualizes the **average tip amount** by **gender** and **day of the week**, allowing for comparison of group-level tipping patterns based on gender which wasn't explicitly visible with the scatterplot.\n",
+    "This heatmap visualizes the **average tip amount** by **gender** and **day of the week**, comparing group-level tipping patterns based on gender which expand on patterns identified with the scatterplot.\n",
     "\n",
     "Key takeaways:\n",
     "- **Sunday** has the highest average tip amounts for both genders:  \n",
@@ -4083,12 +4083,12 @@
     "  - Male: **\\$2.98**\n",
     "- The gender differences are small overall, but **females tip slightly more** than males on Friday and Sunday, while **males tip more** on Thursday and Saturday.\n",
     "\n",
-    "The accompanying heatmap by **smoker status** reveals similar patterns:\n",
+    "The second heatmap with **smoker status** reveals similar patterns:\n",
     "- **Smokers** tip the most on **Sunday** (**\\$3.52**), but this is not consistent across other days.\n",
     "- **Non-smokers** tip slightly more on Friday and Saturday, while smokers lead on Sunday and Thursday.\n",
     "- Overall, the differences between smokers and non-smokers are small and **inconsistent**, suggesting that **smoker status does not have a meaningful impact** on average tipping behavior.\n",
     "\n",
-    "Together, these heatmaps highlight **day of the week** as the most influential factor, while **gender and smoking status appear to play minimal roles** in shaping average tip amounts."
+    "Together, these heatmaps highlight that **gender and smoking status appear to play minimal roles** in shaping average tip amounts."
    ]
   },
   {
