--- a/FinalProjectCode.ipynb
+++ b/FinalProjectCode.ipynb
@@ -5968,7 +5968,7 @@
    "id": "d064002a",
    "metadata": {},
    "source": [
-    "On the test set, tonly bill was statistically significant ($p<0.001$), indicating a positive association with `log(tip)`— one-dollar increase in the total bill is associated with a 0.0264 unit increase in `log(tip)`, holding party size and day of the week constant. \n",
+    "On the test set, only bill was statistically significant ($p<0.001$), indicating a positive association with `log(tip)`— one-dollar increase in the total bill is associated with a 0.0264 unit increase in `log(tip)`, holding party size and day of the week constant. \n",
     "\n",
     "Since $$log(tip) = \\beta_0 + \\beta_1X_1 + \\beta_2X_2 + \\beta_3X_3...$$\n",
     "$$tip = e^{\\beta_0 + \\beta_1X_1 + \\beta_2X_2 + \\beta_3X_3...}$$\n",
