--- a/FinalProjectCode.ipynb
+++ b/FinalProjectCode.ipynb
@@ -5662,6 +5662,7 @@
     }
    ],
    "source": [
+    "#Constructing the adj R^2 values for the forward selection and preseting them in a table\n",
     "tips_fwd_summary_df <- \n",
     "    tibble(\n",
     "        n_input_variables = 1:8,\n",
@@ -5670,6 +5671,8 @@
     "        ADJ.R2 = tips_forward_summary$adjr2\n",
     "    )\n",
     "tips_fwd_summary_df\n",
+    "\n",
+    "#Constructing a graph to represent the change in adj R^2 with different numbers of input variables.\n",
     "ggplot(tips_fwd_summary_df,aes(x =  n_input_variables,y = ADJ.R2)) +\n",
     "geom_line() + \n",
     "labs(x = \"Number of input variables\",\n",
@@ -5768,7 +5771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "8a913a2c",
    "metadata": {},
    "outputs": [],
@@ -5786,7 +5789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "303a6d40",
    "metadata": {},
    "outputs": [
@@ -5841,7 +5844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "f3dd3c2f",
    "metadata": {},
    "outputs": [
@@ -5855,8 +5858,8 @@
        "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>70</td><td>9.171772</td><td>NA</td><td>     NA</td><td>      NA</td><td>       NA</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>63</td><td>8.143592</td><td> 7</td><td>1.02818</td><td>1.136307</td><td>0.3522505</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>67</td><td>8.878373</td><td>NA</td><td>       NA</td><td>      NA</td><td>       NA</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>63</td><td>8.143592</td><td> 4</td><td>0.7347813</td><td>1.421094</td><td>0.2373253</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -5866,8 +5869,8 @@
        "  & Res.Df & RSS & Df & Sum of Sq & F & Pr(>F)\\\\\n",
        "  & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t1 & 70 & 9.171772 & NA &      NA &       NA &        NA\\\\\n",
-       "\t2 & 63 & 8.143592 &  7 & 1.02818 & 1.136307 & 0.3522505\\\\\n",
+       "\t1 & 67 & 8.878373 & NA &        NA &       NA &        NA\\\\\n",
+       "\t2 & 63 & 8.143592 &  4 & 0.7347813 & 1.421094 & 0.2373253\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -5876,14 +5879,14 @@
        "\n",
        "| <!--/--> | Res.Df &lt;dbl&gt; | RSS &lt;dbl&gt; | Df &lt;dbl&gt; | Sum of Sq &lt;dbl&gt; | F &lt;dbl&gt; | Pr(&gt;F) &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| 1 | 70 | 9.171772 | NA |      NA |       NA |        NA |\n",
-       "| 2 | 63 | 8.143592 |  7 | 1.02818 | 1.136307 | 0.3522505 |\n",
+       "| 1 | 67 | 8.878373 | NA |        NA |       NA |        NA |\n",
+       "| 2 | 63 | 8.143592 |  4 | 0.7347813 | 1.421094 | 0.2373253 |\n",
        "\n"
       ],
       "text/plain": [
        "  Res.Df RSS      Df Sum of Sq F        Pr(>F)   \n",
-       "1 70     9.171772 NA      NA         NA        NA\n",
-       "2 63     8.143592  7 1.02818   1.136307 0.3522505"
+       "1 67     8.878373 NA        NA       NA        NA\n",
+       "2 63     8.143592  4 0.7347813 1.421094 0.2373253"
       ]
      },
      "metadata": {},
@@ -5896,7 +5899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "2752846f-2370-4821-ab90-0e8789c0be8b",
    "metadata": {},
    "outputs": [
@@ -5982,7 +5985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "ae49ff92-0b5a-40d3-8256-ebcb1d85e10e",
    "metadata": {},
    "outputs": [
@@ -5990,57 +5993,69 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 5</caption>\n",
+       "<caption>A tibble: 9 × 5</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>term</th><th scope=col>estimate</th><th scope=col>std.error</th><th scope=col>statistic</th><th scope=col>p.value</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>(Intercept)</td><td> 0.36704008</td><td>0.15764082</td><td> 2.3283314</td><td>0.0227889195</td></tr>\n",
-       "\t<tr><td>bill       </td><td> 0.02638337</td><td>0.00669151</td><td> 3.9428125</td><td>0.0001886687</td></tr>\n",
-       "\t<tr><td>party_size </td><td> 0.07499180</td><td>0.05660827</td><td> 1.3247499</td><td>0.1895626953</td></tr>\n",
-       "\t<tr><td>daySat     </td><td>-0.15614084</td><td>0.14093210</td><td>-1.1079154</td><td>0.2716907270</td></tr>\n",
-       "\t<tr><td>daySun     </td><td>-0.05336923</td><td>0.14713533</td><td>-0.3627221</td><td>0.7179054473</td></tr>\n",
-       "\t<tr><td>dayThur    </td><td>-0.09471580</td><td>0.15367666</td><td>-0.6163317</td><td>0.5396748172</td></tr>\n",
+       "\t<tr><td>(Intercept) </td><td>-0.09712070</td><td>0.46702638</td><td>-0.2079555</td><td>0.83589457</td></tr>\n",
+       "\t<tr><td>bill        </td><td> 0.05391669</td><td>0.02618455</td><td> 2.0591029</td><td>0.04337451</td></tr>\n",
+       "\t<tr><td>daySat      </td><td> 0.27192766</td><td>0.48765272</td><td> 0.5576256</td><td>0.57895844</td></tr>\n",
+       "\t<tr><td>daySun      </td><td> 0.54135943</td><td>0.48605145</td><td> 1.1137904</td><td>0.26934890</td></tr>\n",
+       "\t<tr><td>dayThur     </td><td> 0.18575007</td><td>0.55008231</td><td> 0.3376769</td><td>0.73666241</td></tr>\n",
+       "\t<tr><td>party_size  </td><td> 0.07909765</td><td>0.05812522</td><td> 1.3608147</td><td>0.17813231</td></tr>\n",
+       "\t<tr><td>bill:daySat </td><td>-0.02618652</td><td>0.02782516</td><td>-0.9411094</td><td>0.35002970</td></tr>\n",
+       "\t<tr><td>bill:daySun </td><td>-0.03440995</td><td>0.02769438</td><td>-1.2424884</td><td>0.21838759</td></tr>\n",
+       "\t<tr><td>bill:dayThur</td><td>-0.01740294</td><td>0.03178866</td><td>-0.5474575</td><td>0.58588357</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 6 × 5\n",
+       "A tibble: 9 × 5\n",
        "\\begin{tabular}{lllll}\n",
        " term & estimate & std.error & statistic & p.value\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t (Intercept) &  0.36704008 & 0.15764082 &  2.3283314 & 0.0227889195\\\\\n",
-       "\t bill        &  0.02638337 & 0.00669151 &  3.9428125 & 0.0001886687\\\\\n",
-       "\t party\\_size  &  0.07499180 & 0.05660827 &  1.3247499 & 0.1895626953\\\\\n",
-       "\t daySat      & -0.15614084 & 0.14093210 & -1.1079154 & 0.2716907270\\\\\n",
-       "\t daySun      & -0.05336923 & 0.14713533 & -0.3627221 & 0.7179054473\\\\\n",
-       "\t dayThur     & -0.09471580 & 0.15367666 & -0.6163317 & 0.5396748172\\\\\n",
+       "\t (Intercept)  & -0.09712070 & 0.46702638 & -0.2079555 & 0.83589457\\\\\n",
+       "\t bill         &  0.05391669 & 0.02618455 &  2.0591029 & 0.04337451\\\\\n",
+       "\t daySat       &  0.27192766 & 0.48765272 &  0.5576256 & 0.57895844\\\\\n",
+       "\t daySun       &  0.54135943 & 0.48605145 &  1.1137904 & 0.26934890\\\\\n",
+       "\t dayThur      &  0.18575007 & 0.55008231 &  0.3376769 & 0.73666241\\\\\n",
+       "\t party\\_size   &  0.07909765 & 0.05812522 &  1.3608147 & 0.17813231\\\\\n",
+       "\t bill:daySat  & -0.02618652 & 0.02782516 & -0.9411094 & 0.35002970\\\\\n",
+       "\t bill:daySun  & -0.03440995 & 0.02769438 & -1.2424884 & 0.21838759\\\\\n",
+       "\t bill:dayThur & -0.01740294 & 0.03178866 & -0.5474575 & 0.58588357\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 6 × 5\n",
+       "A tibble: 9 × 5\n",
        "\n",
        "| term &lt;chr&gt; | estimate &lt;dbl&gt; | std.error &lt;dbl&gt; | statistic &lt;dbl&gt; | p.value &lt;dbl&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| (Intercept) |  0.36704008 | 0.15764082 |  2.3283314 | 0.0227889195 |\n",
-       "| bill        |  0.02638337 | 0.00669151 |  3.9428125 | 0.0001886687 |\n",
-       "| party_size  |  0.07499180 | 0.05660827 |  1.3247499 | 0.1895626953 |\n",
-       "| daySat      | -0.15614084 | 0.14093210 | -1.1079154 | 0.2716907270 |\n",
-       "| daySun      | -0.05336923 | 0.14713533 | -0.3627221 | 0.7179054473 |\n",
-       "| dayThur     | -0.09471580 | 0.15367666 | -0.6163317 | 0.5396748172 |\n",
+       "| (Intercept)  | -0.09712070 | 0.46702638 | -0.2079555 | 0.83589457 |\n",
+       "| bill         |  0.05391669 | 0.02618455 |  2.0591029 | 0.04337451 |\n",
+       "| daySat       |  0.27192766 | 0.48765272 |  0.5576256 | 0.57895844 |\n",
+       "| daySun       |  0.54135943 | 0.48605145 |  1.1137904 | 0.26934890 |\n",
+       "| dayThur      |  0.18575007 | 0.55008231 |  0.3376769 | 0.73666241 |\n",
+       "| party_size   |  0.07909765 | 0.05812522 |  1.3608147 | 0.17813231 |\n",
+       "| bill:daySat  | -0.02618652 | 0.02782516 | -0.9411094 | 0.35002970 |\n",
+       "| bill:daySun  | -0.03440995 | 0.02769438 | -1.2424884 | 0.21838759 |\n",
+       "| bill:dayThur | -0.01740294 | 0.03178866 | -0.5474575 | 0.58588357 |\n",
        "\n"
       ],
       "text/plain": [
-       "  term        estimate    std.error  statistic  p.value     \n",
-       "1 (Intercept)  0.36704008 0.15764082  2.3283314 0.0227889195\n",
-       "2 bill         0.02638337 0.00669151  3.9428125 0.0001886687\n",
-       "3 party_size   0.07499180 0.05660827  1.3247499 0.1895626953\n",
-       "4 daySat      -0.15614084 0.14093210 -1.1079154 0.2716907270\n",
-       "5 daySun      -0.05336923 0.14713533 -0.3627221 0.7179054473\n",
-       "6 dayThur     -0.09471580 0.15367666 -0.6163317 0.5396748172"
+       "  term         estimate    std.error  statistic  p.value   \n",
+       "1 (Intercept)  -0.09712070 0.46702638 -0.2079555 0.83589457\n",
+       "2 bill          0.05391669 0.02618455  2.0591029 0.04337451\n",
+       "3 daySat        0.27192766 0.48765272  0.5576256 0.57895844\n",
+       "4 daySun        0.54135943 0.48605145  1.1137904 0.26934890\n",
+       "5 dayThur       0.18575007 0.55008231  0.3376769 0.73666241\n",
+       "6 party_size    0.07909765 0.05812522  1.3608147 0.17813231\n",
+       "7 bill:daySat  -0.02618652 0.02782516 -0.9411094 0.35002970\n",
+       "8 bill:daySun  -0.03440995 0.02769438 -1.2424884 0.21838759\n",
+       "9 bill:dayThur -0.01740294 0.03178866 -0.5474575 0.58588357"
       ]
      },
      "metadata": {},
